[package]
name = "index_fund_buyer"
version = "0.1.0"
authors = ["Benjamin <ben@congdon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
prettytable-rs = "^0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", default-features = false, features = ["macros"] }
toml = "0.5"
yahoo-finance = "0.3"
z3 = {version="0.10.0", features = ["static-link-z3"]}
